# prescriptions-for-patients

./: .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  CONTRIBUTING.md  Makefile  README.md  ecs-proxies-containers.yml  ecs-proxies-deploy.yml  manifest_template.yml  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: continuous-integration.yml  create_int_release_notes.yml  create_prod_release_notes.yml  create_rc_int_release_notes.yml  mark_jira_released.yml  pr-link.yml  pr-lint.yaml  pull_request.yml  quality_checks.yml
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: environment_post_deploy.yml  environment_pre_deploy.yml  global_post_deploy.yml  global_pre_deploy.yml  int_post_deploy.yml  post_dev_deploy..yml  post_dev_deploy.yml  post_int_deploy.yml  post_prod_deploy.yml  pre_int_deploy.yml  run_tests.yml
proxies/live/apiproxy/: proxy.xml
proxies/live/apiproxy/policies/: AssignMessage.AddApplicationNameHeader.xml  AssignMessage.AddDelegationHeaders.xml  AssignMessage.AddHstsHeader.xml  AssignMessage.Copy.RequestHeaders.xml  AssignMessage.EnableDelegatedAccess.xml  AssignMessage.Errors.CatchAllMessage.xml  AssignMessage.Errors.InvalidCorrelationID.xml  AssignMessage.Errors.InvalidRequestID.xml  AssignMessage.OAuthPolicyErrorResponse.xml  AssignMessage.OverridePatientAccessHeader.xml  DecodeJWT.DecodeIdToken.xml  Flow.VerifyHeaders.xml  FlowCallout.GetEnvironmentKeyValueMapData.xml  FlowCallout.LogToSplunkRequestContentBody.xml  FlowCallout.SetSplunkPayload.xml  FlowCallout.VerifyHeaders.xml  OAuthV2.VerifyAccessTokenAppLevel3OrCis2Aal3.xml  OAuthV2.VerifyAccessTokenP9.xml  RaiseFault.400InvalidCorrelationID.xml  ServiceCallout.CallHealthcheckEndpoint.xml  ServiceCallout.CallMetadataEndpoint.xml  javascript.DelegationGate.xml  javascript.DelegationSetHeaders.xml  javascript.RestrictPatchRequest.xml
proxies/live/apiproxy/proxies/: default.xml
proxies/live/apiproxy/targets/: target.xml
proxies/sandbox/apiproxy/: proxy.xml
proxies/sandbox/apiproxy/policies/: AssignMessage.Errors.CatchAllMessage.xml  ServiceCallout.CallHealthcheckEndpoint.xml
proxies/sandbox/apiproxy/proxies/: default.xml
proxies/sandbox/apiproxy/targets/: sandbox.xml
sandbox/: app.js  app.spec.js  handlers.js  package-lock.json  package.json
scripts/: run_regression_tests.py  test_delegated_access.py
specification/: README.md  prescriptions-for-patients.yaml
specification/examples/GetMyPrescriptions/Bundle/: error.json  success-distance-selling.json  success-multiple-exclusion.json  success-multiple.json  success-single-exclusion.json  success.json
specification/schemas/fragments/: structuredName.yaml
specification/schemas/fragments/medicationRequest/: status.yaml  statusDate.yaml
specification/schemas/resources/: MedicationRequest.yaml  OperationOutcome.yaml  Organisation.yaml  Practitioner.yaml
tests/: conftest.py  test_endpoints.py  test_headers.py
(+10 files in other folders)
