[project]
python = "^3.8"

[tool.poetry]
name = "prescriptions-for-patients"
version = "0.0.1-alpha"
description = "TODO"
authors = [
    "Anthony Brown <anthony.brown8@nhs.net>",
    "Matthew Popat <matthew.popat1@nhs.net>",
    "Chris Matus <chris.matus@nhs.net>",
    "Phil Gee <phil.gee@nhs.net>",
    "Kris Szlapa <kris.szlapa1@nhs.net>",
    "Jack Spagnoli <jack.spagnoli1@nhs.net>",
    "Tom Smith <tom.smith24@nhs.net>",
    "Adam Brown <adam.brown41@nhs.net>",
    "Sean Steberis <sean.steberis2@nhs.net>",
    "Kate.Bobyn <kate.bobyn2@nhs.net>"
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/prescriptions-for-patients"
homepage = "https://github.com/NHSDigital/prescriptions-for-patients"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords


[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^3.5.0"
pytest-nhsd-apim = "^3.4.2"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
pip-licenses = "^4.5.1"
flake8 = "^5.0.4"
black = "^24.4"
jinja2 = "^3.1.4"
pyyaml = "^6.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.2"
gitpython = "^3.1.43"
coverage = "^7.6"
aiohttp = "^3.9.5"
pytest-asyncio = "^0.23.8"
pytest = "^8.3.1"
