[project]
name = "prescriptions-for-patients"
version = "0.0.1-alpha"
description = "Prescriptions for Patients API"
requires-python = ">=3.12, <4.0"
readme = 'README.md'
license = "MIT"

[tool.poetry]
package-mode = false 
authors = [
    "eps team"
]
repository = "https://github.com/NHSDigital/prescriptions-for-patients"
homepage = "https://github.com/NHSDigital/prescriptions-for-patients"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.5.0"
pytest-nhsd-apim = "^5.0.6"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
pip-licenses = "^4.5.1"
flake8 = "^5.0.4"
black = "^24.8"
jinja2 = "^3.1.5"
pyyaml = "^6.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.4"
gitpython = "^3.1.45"
coverage = "^7.6"
aiohttp = "^3.10.11"
pytest-asyncio = "^0.24.0"
pytest = "^8.3.5"
